--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <provider
+            android:authorities="com.techeclipse.archer.noteit.notesprovider"
+            android:name=".NotesProvider"
+            android:exported="false" />
+    </application>
 </manifest>
